card clickable bug fixed and modified the spacing of the banner

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -13,7 +13,7 @@
 }
 
 .projects__card {
-  height: 360px;
+  height: 390px;
   width: 300px;
   background-color: white;
   color: white;
@@ -48,6 +48,7 @@
   position: relative;
   text-align: center;
   display: block;
+  height: 100%;
   right: 0;
   padding: 2vh 2vw;
   color: black;
