--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -30,8 +30,8 @@ img.photo__banner{
 
 .banner__left h1{
   width: 50vw;
-  padding: 20vh 8% 15vh 12%;
-  font-size: 41px;
+  padding: 20vh 9vw;
+  font-size: 40px;
   letter-spacing: -0.05em;
   font-weight: bold;
   text-align: center;
